--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,8 @@ VignetteBuilder:
 Encoding: UTF-8
 Language: en-US
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 Collate:
     'global.R'
+    'data.R'
+    'main.R'
