--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: campsisverse
-Title: TODO
-Version: 0.0.1
+Title: The official R package manager of the Campsis suite
+Version: 0.0.2
 Authors@R: 
     person("Nicolas", "Luyckx", , "nicolas.luyckx@calvagone.com", role = c("aut", "cre"))
 Description: TODO
