Only 1 renv file per version.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(qualify)
 export(restore)
 export(use)
 export(with_dir)
+importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,toJSON)
 importFrom(methods,callNextMethod)
 importFrom(methods,is)
 importFrom(methods,new)
