Recreate properly lock file + uninstall.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,9 @@
 
 export(configureOptions)
 export(getLockFile)
-export(qualify)
 export(restore)
+export(runQualification)
+export(uninstall)
 export(use)
 export(with_dir)
 importFrom(jsonlite,fromJSON)
@@ -16,3 +17,4 @@ importFrom(methods,slotNames)
 importFrom(methods,validObject)
 importFrom(renv,load)
 importFrom(renv,restore)
+importFrom(renv,use)
