--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: The official R package manager of the Campsis suite
 Version: 24.10.31
 Authors@R: 
     person("Nicolas", "Luyckx", , "nicolas.luyckx@calvagone.com", role = c("aut", "cre"))
-Description: TODO
+Description: Easy installation and management of the Campsis suite.
 License: GPL (>= 3)
 URL: https://github.com/Calvagone/campsisverse, https://calvagone.github.io/
 BugReports: https://github.com/Calvagone/campsisverse/issues
