--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(uninstall)
 export(use)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
+importFrom(remotes,install_github)
 importFrom(renv,load)
 importFrom(renv,restore)
 importFrom(renv,use)
+importFrom(utils,askYesNo)
