#7 Add install method.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 export(getCampsisSuitePackages)
 export(getLockFile)
+export(install)
 export(restore)
 export(uninstall)
 export(use)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(remotes,install_github)
+importFrom(renv,install)
 importFrom(renv,load)
 importFrom(renv,restore)
 importFrom(renv,use)
